--- a/main/chrona-base/APKBUILD
+++ b/main/chrona-base/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Şahan Yılmaz <sahan@chrona.org.tr>
 pkgname=chrona-base
-pkgver=25.5
+pkgver=25.5-beta0
 pkgrel=0
 pkgdesc="Meta package for minimal chrona base"
 url="https://chronalinux.org.tr"
@@ -36,12 +36,6 @@ release() {
 	echo $pkgver > "$subpkgdir"/etc/alpine-release
 	local _ver="$(echo "$pkgver" | grep -E -o '^[0-9]+\.[0-9]+')"
 	local _rel="v$_ver"
-	case "$pkgver" in
-	*_alpha*|*_beta*|*_pre*)
-		_ver="$pkgver (edge)"
-		_rel="edge"
-		;;
-	esac
 
 	# create /etc/issue
 	cat >"$subpkgdir"/etc/issue<<EOF
