--- a/main/chrona-base/APKBUILD
+++ b/main/chrona-base/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Şahan Yılmaz <sahan@chrona.org.tr>
 pkgname=chrona-base
-pkgver=25.06
+pkgver=25.06_beta
 pkgrel=0
 pkgdesc="Meta package for minimal chrona base"
 url="https://chronalinux.org.tr"
@@ -30,7 +30,7 @@ package() {
 release() {
 	depends="alpine-keys"
 	pkgdesc="Chrona release data"
-
+    replaces="alpine-release"
 	mkdir -p "$subpkgdir"/etc
 	# create /etc/alpine-release
 	echo $pkgver > "$subpkgdir"/etc/alpine-release
